--- a/templates/ConfluenceDataCenter.template.yaml
+++ b/templates/ConfluenceDataCenter.template.yaml
@@ -134,6 +134,8 @@ Metadata:
         default: DB Pool Minimum Size
       DBPreferredTestQuery:
         default: DB Preferred Test Query
+      DBReadReplicaInstanceClass:
+        default: Read Replica Instance Class
       DBStorage:
         default: Database storage
       DBStorageType:
@@ -164,6 +166,8 @@ Metadata:
         default: Enable App to Process Email
       SSLCertificateARN:
         default: SSL Certificate ARN
+      StartCollectd:
+        default: Start the collectd metrics agent
       StorageEncrypted:
         default: Encryption
       SubDomainName:
@@ -324,8 +328,8 @@ Parameters:
     Description: Instance type for the cluster application nodes (note - for "synchrony-local" collaborative editing you must chose an instance size with over 5 GB RAM).
     Type: String
   ClusterNodeMax:
-    Description: Maximum number of nodes in the cluster.
     Default: 1
+    Description: Maximum number of nodes in the cluster.
     Type: Number
   ClusterNodeMin:
     Default: 1
@@ -354,8 +358,15 @@ Parameters:
     Description: The version of Confluence to install
     Type: String
   CustomDnsName:
-    Default: ''
     Description: 'Use custom existing DNS name for your Data Center instance. This will take precedence over HostedZone. Please note: you must own the domain and configure it to point at the load balancer.'
+    Type: String
+  DBAcquireIncrement:
+    Default: 1
+    Description: Determines how many connections at a time c3p0 will try to acquire when the pool is exhausted
+    Type: String
+  DBIdleTestPeriod:
+    Default: 100
+    Description: If greater than 0, this is the frequency (in seconds) that c3po will test all idle, pooled but unchecked-out connections.
     Type: String
   DBInstanceClass:
     Default: db.t2.medium
@@ -392,7 +403,7 @@ Parameters:
       - db.t3.large
       - db.t3.xlarge
       - db.t3.2xlarge
-    ConstraintDescription: Must be a valid RDS instance class from the list
+    ConstraintDescription: Must be a valid RDS instance class, from the selection list
     Description: RDS instance type
     Type: String
   DBIops:
@@ -410,6 +421,10 @@ Parameters:
     MaxLength: 128
     NoEcho: true
     Type: String
+  DBMaxStatements:
+    Default: 0
+    Description: The size of c3p0's global PreparedStatement cache. It controls the total number of Statements cached, for all Connections. If set, it should be a fairly large number, as each pooled Connection requires its own, distinct flock of cached statements.
+    Type: String
   DBMultiAZ:
     Description: Whether to provision a multi-AZ RDS instance.
     Default: true
@@ -426,6 +441,10 @@ Parameters:
     MaxLength: 128
     NoEcho: true
     Type: String
+  DBPreferredTestQuery:
+    Default: 'select version();'
+    Description: The query that will be executed for all connection tests
+    Type: String
   DBPoolMaxSize:
     Default: 60
     Description: The maximum number of database connections that can be opened at any time
@@ -434,33 +453,9 @@ Parameters:
     Default: 20
     Description: The minimum number of idle database connections that are kept open at any time
     Type: String
-  DBTimeout:
-    Default: 30
-    Description: Number of seconds that Connections in excess of minPoolSize should be permitted to remain idle in the pool before being culled
-    Type: String
-  DBIdleTestPeriod:
-    Default: 100
-    Description: If greater than 0, this is the frequency (in seconds) that c3po will test all idle, pooled but unchecked-out connections.
-    Type: String
-  DBMaxStatements:
-    Default: 0
-    Description: The size of c3p0's global PreparedStatement cache. It controls the total number of Statements cached, for all Connections. If set, it should be a fairly large number, as each pooled Connection requires its own, distinct flock of cached statements.
-    Type: String
-  DBValidate:
-    Default: false
-    Description: If true, a connection test will be performed at every connection checkout to verify that the connection is valid
-    Type: String
-  DBPreferredTestQuery:
-    Default: 'select version();'
-    Description: The query that will be executed for all connection tests
-    Type: String
-  DBAcquireIncrement:
-    Default: 1
-    Description: Determines how many connections at a time c3p0 will try to acquire when the pool is exhausted
-    Type: String
   DBReadReplicaInstanceClass:
     Default: none
-    Description: Select an instance class for a read replica DB (will not be used by the application; intended for third-party/read-only access). Note that enabling this will require brief downtime for your database if Multi-AZ is not enabled!
+    Description: Select an instance class for a read replica DB (will not be used by application; intended for third-party/read-only access). Note that enabling this will require brief downtime for your database if Multi-AZ is not enabled!
     AllowedValues:
       - none
       - db.m4.large
@@ -479,6 +474,10 @@ Parameters:
       - db.t2.large
       - db.t2.xlarge
       - db.t2.2xlarge
+      - db.t3.medium
+      - db.t3.large
+      - db.t3.xlarge
+      - db.t3.2xlarge
     Type: String
   DBStorage:
     Default: 10
@@ -492,6 +491,14 @@ Parameters:
     ConstraintDescription: Must be 'General Purpose (SSD)' or 'Provisioned IOPS'.
     Description: Database storage type
     Type: String
+  DBTimeout:
+    Default: 30
+    Description: Number of seconds that Connections in excess of minPoolSize should be permitted to remain idle in the pool before being culled
+    Type: String
+  DBValidate:
+    Default: false
+    Description: If true, a connection test will be performed at every connection checkout to verify that the connection is valid
+    Type: String
   DeployEnvironment:
     Default: prod
     AllowedValues:
@@ -503,17 +510,14 @@ Parameters:
     Description: Environment of the application - either Production, Staging, or Disaster Recovery (DR)
     Type: String
   ExternalSubnets:
-    Default: ''
     ConstraintDescription: Must be a list of two or more Subnet IDs within the selected VPC.
     Description: Subnets (two or more) where your user-facing load balancer will be deployed. MUST be within the selected VPC.
     Type: List<AWS::EC2::Subnet::Id>
   HostedZone:
-    Default: ''
     ConstraintDescription: Must be the name of an existing Route53 Hosted Zone.
     Description: The domain name of the Route53 PRIVATE Hosted Zone in which to create cnames
     Type: String
   InternalSubnets:
-    Default: ''
     ConstraintDescription: Must be a list of two or more Subnet IDs within the selected VPC.
     Description: Subnets (two or more) where your cluster nodes and other internal infrastructure will be deployed. MUST be within the selected VPC. Specify the ExternalSubnets again here if you wish to deploy the whole stack into the same subnets.
     Type: List<AWS::EC2::Subnet::Id>
@@ -531,11 +535,9 @@ Parameters:
     Description: The EC2 Key Pair to allow SSH access to the instances
     Type: AWS::EC2::KeyPair::KeyName
   LocalAnsibleGitRepo:
-    Default: ''
     Description: For additional node customization, provide repo location to git clone. This must be in format git@bitbucket.org:atlassian/atlassian-local-ansible-example.git if using Bitbucket Cloud, or ssh://git@stash.example.com:7997/my-local-ansible.git (ie protocol included) if using Bitbucket Server.
     Type: String
   LocalAnsibleGitSshKeyName:
-    Default: ''
     Description: If your git repo is private, provide an AWS Systems Manager ParameterStore key name that holds an SSH private key that can access the repo
     Type: String
   MailEnabled:
@@ -758,7 +760,6 @@ Conditions:
     !Equals [!Ref CollaborativeEditingMode, 'synchrony-separate-nodes']
   GovCloudCondition:
     !Equals [!Ref 'AWS::Region', 'us-gov-west-1']
-
 Mappings:
   AWSInstanceType2Arch:
     c4.xlarge:
@@ -1157,6 +1158,13 @@ Resources:
                     - !Sub '${AWS::StackName} sg'
                 Effect: Allow
                 Resource: ['*']
+        - PolicyName: !Sub '${AWS::StackName}-ansible-custom-policy'
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Action: ['iam:ListRolePolicies', 'iam:GetRolePolicy']
+                Effect: Allow
+                Resource: !Sub 'arn:aws:iam::${AWS::AccountId}:role/${AWS::StackName}-JiraClusterNodeRole*'
   ConfluenceClusterNodeInstanceProfile:
     Type: AWS::IAM::InstanceProfile
     Properties:
@@ -1991,7 +1999,7 @@ Outputs:
     Value: !Ref SecurityGroup
     Export: {
       Name: !Join ['', [!Ref 'AWS::StackName', '-SGname']]
-      }
+    }
   DBEndpointAddress:
     Description: The Database Connection String
     Value: !GetAtt DB.Endpoint.Address
