--- a/templates/JiraDataCenter.template.yaml
+++ b/templates/JiraDataCenter.template.yaml
@@ -49,6 +49,7 @@ Metadata:
         Parameters:
           - CustomDnsName
           - HostedZone
+          - SubDomainName
       - Label:
           default: Advanced (Optional)
         Parameters:
@@ -84,7 +85,6 @@ Metadata:
           - TomcatProtocol
           - TomcatRedirectPort
           - TomcatScheme
-
     ParameterLabels:
       AssociatePublicIpAddress:
         default: Assign public IP
@@ -202,15 +202,15 @@ Parameters:
     Description: Controls if the EC2 instances are assigned a public IP address
     Type: String
   CatalinaOpts:
-    Description: Pass in any additional jvm options to tune Catalina
+    Description: Pass in any additional JVM options to tune Catalina Tomcat
     Type: String
   CidrBlock:
     AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
     ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x.
-    Description: CIDR Block allowed to access the Atlassian product. This should be set to a trusted IP range; if you want to give public access use '0.0.0.0/0'.
-    Type: String
+    Description: CIDR block allowed to access the Atlassian product. This should be set to a trusted IP range; if you want to give public access use '0.0.0.0/0'.
     MinLength: 9
     MaxLength: 18
+    Type: String
   ClusterNodeInstanceType:
     Default: t3.medium
     AllowedValues:
@@ -372,18 +372,18 @@ Parameters:
     Type: String
   DBIops:
     Default: 1000
-    ConstraintDescription: 'Must be in the range 1000 - 30000'
-    Description: 'Must be in the range of 1000 - 30000 and a multiple of 1000. This value is only used with Provisioned IOPS. Note: The ratio of IOPS per allocated-storage must be between 3.00 and 10.00'
+    ConstraintDescription: Must be in the range 1000 - 30000
+    Description: 'Must be in the range of 1000 - 30000 and a multiple of 1000. This value is only used with Provisioned IOPS. Note: The ratio of IOPS per allocated-storage must be between 3.00 and 10.00.'
     MinValue: 1000
     MaxValue: 30000
     Type: Number
   DBMasterUserPassword:
     AllowedPattern: '[a-zA-Z0-9]*'
     ConstraintDescription: Must be at least 8 alphanumeric characters.
-    Description: Database admin account password.
-    NoEcho: True
+    Description: Password for the master ('postgres') account.
     MinLength: 8
     MaxLength: 128
+    NoEcho: true
     Type: String
   DBMaxIdle:
     Default: 20
@@ -460,8 +460,8 @@ Parameters:
     Description: The length of time (in seconds) that a database connection can be idle before it is considered abandoned
     Type: String
   DBStorage:
-    Default: 200
-    Description: Database allocated storage size, in gigabytes (GB)
+    Default: 10
+    Description: Database allocated storage size, in gigabytes (GB). If you choose Provisioned IOPS, storage should be between 100 and 6144
     Type: Number
   DBStorageType:
     Default: General Purpose (SSD)
@@ -548,6 +548,10 @@ Parameters:
     ConstraintDescription: Must be 'true' or 'false'.
     Default: true
     Description: Enable mail processing and sending
+    Type: String
+  SubDomainName:
+    Description: Leave this field blank to use your stack name as the sub-domain.
+    Default: ''
     Type: String
   SSLCertificateARN:
     Default: ''
@@ -647,6 +651,8 @@ Conditions:
       - !Condition UseHostedZone
   UsePublicIp:
     !Equals [!Ref AssociatePublicIpAddress, 'true']
+  UseSubDomainName:
+    !Not [!Equals [!Ref SubDomainName, '']]
 Mappings:
   AWSInstanceType2Arch:
     c4.xlarge:
@@ -1062,8 +1068,8 @@ Resources:
     Properties:
       DesiredCapacity: !Ref ClusterNodeMin
       LaunchConfigurationName: !Ref ClusterNodeLaunchConfig
-      MaxSize: !Ref ClusterNodeMax
       MinSize: !Ref ClusterNodeMin
+      MaxSize: !Ref ClusterNodeMax
       LoadBalancerNames:
         - !Ref LoadBalancer
       VPCZoneIdentifier: !Ref InternalSubnets
@@ -1098,7 +1104,7 @@ Resources:
               owner: root
               group: root
               content:
-                'Fn::Join':
+                !Join
                   - "\n"
                   -
                     - !If [SSLScheme, "ATL_SSL_PROXY=true", !Ref "AWS::NoValue"]
@@ -1421,7 +1427,10 @@ Resources:
     Properties:
       HostedZoneName: !Ref HostedZone
       Comment: Route53 cname for the ALB
-      Name: !Join ['.', [!Ref "AWS::StackName", !Ref 'HostedZone']]
+      Name: !Sub
+        - "${SubDomainName}.${HostedZone}"
+        - SubDomainName: !If [UseSubDomainName, !Ref 'SubDomainName', !Ref 'AWS::StackName']
+          HostedZone: !Ref 'HostedZone'
       Type: CNAME
       TTL: '900'
       ResourceRecords:
