--- a/templates/ConfluenceDataCenterClone.template.yaml
+++ b/templates/ConfluenceDataCenterClone.template.yaml
@@ -1,5 +1,5 @@
 ---
-# Bring up diffs between this file and the JiraDataCenterClone.template, and CrowdDataCenter.template.
+# Bring up diffs between this file and the JiraDataCenterClone.template, ConfluenceServerClone.template and CrowdDataCenterClone.template.
 # As a rule, we should work to minimize our diffs between these files as best we can, so that future changes are easy to make across all supported CloudFormation templates.
 # Using YAML as our file format will allow us to put a block comment at the top of the file saying exactly this.
 AWSTemplateFormatVersion: 2010-09-09
@@ -42,7 +42,7 @@ Metadata:
           - CidrBlock
           - ExternalSubnets
           - InternalSubnets
-          - KeyName
+          - KeyPairName
           - SSLCertificateARN
           - VPC
       - Label:
@@ -115,12 +115,18 @@ Metadata:
         default: Version *
       CustomDnsName:
         default: Existing DNS name (optional)
+      DBAcquireIncrement:
+          default: DB Acquire Increment
+      DBIdleTestPeriod:
+        default: DB Idle Test Period
       DBInstanceClass:
         default: Database instance class
       DBIops:
         default: RDS Provisioned IOPS
       DBMasterUserPassword:
         default: Master (admin) password *
+      DBMaxStatements:
+        default: DB Max Statements
       DBMultiAZ:
         default: Enable RDS Multi-AZ deployment
       DBPassword:
@@ -131,24 +137,22 @@ Metadata:
         default: DB Pool Maximum Size
       DBPoolMinSize:
         default: DB Pool Minimum Size
-      DBTimeout:
-        default: DB Timeout
-      DBIdleTestPeriod:
-        default: DB Idle Test Period
-      DBMaxStatements:
-        default: DB Max Statements
-      DBValidate:
-        default: DB Validate
       DBPreferredTestQuery:
         default: DB Preferred Test Query
-      DBAcquireIncrement:
-        default: DB Acquire Increment
+      DBReadReplicaInstanceClass:
+        default: Read Replica Instance Class
+      DBStorage:
+        default: Database storage
       DBStorageType:
         default: Database storage type
-      EBSSnapshotId:
-        default: EBS (shared filesystem) snapshot ID to restore from
+      DBTimeout:
+        default: DB Timeout
+      DBValidate:
+        default: DB Validate
       DeployEnvironment:
         default: Deployment Environment
+      EBSSnapshotId:
+        default: EBS (shared filesystem) snapshot ID to restore from
       ExternalSubnets:
         default: External subnets *
       HostedZone:
@@ -159,7 +163,7 @@ Metadata:
         default: Confluence Heap Size Override
       JvmHeapOverrideSynchrony:
         default: Synchrony Heap Size Override
-      KeyName:
+      KeyPairName:
         default: Key Name *
       LocalAnsibleGitRepo:
         default: Git repo for local-ansible
@@ -169,6 +173,8 @@ Metadata:
         default: Enable App to Process Email
       SSLCertificateARN:
         default: SSL Certificate ARN
+      StartCollectd:
+        default: Start the collectd metrics agent
       StorageEncrypted:
         default: Encryption
       SubDomainName:
@@ -213,16 +219,16 @@ Parameters:
     Description: Sets the Remember Me (autologin) cookie expiry length in seconds. If blank this defaults to 1 year.
     Type: String
   CatalinaOpts:
-    Description: Pass in any additional jvm options to tune Catalina
+    Description: Pass in any additional JVM options to tune Catalina Tomcat
     Type: String
   CidrBlock:
     Default: '0.0.0.0/0'
     AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
     ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x.
-    Description: The CIDR IP range that is permitted to access the Confluence URL. Use 0.0.0.0/0 if you want public access from the internet.
-    Type: String
+    Description: CIDR block allowed to access the Atlassian product. This should be set to a trusted IP range; if you want to give public access use '0.0.0.0/0'.
     MinLength: 9
     MaxLength: 18
+    Type: String
   ClusterNodeInstanceType:
     Default: t3.medium
     AllowedValues:
@@ -327,17 +333,19 @@ Parameters:
       - z1d.6xlarge
       - z1d.12xlarge
     ConstraintDescription: Must be an EC2 instance type from the selection list
-    Description: Instance type for the cluster application nodes (note.. for "synchrony-local" collaborative editing you must chose an instance size with over 5gb ram).
+    Description: Instance type for the cluster application nodes (note - for "synchrony-local" collaborative editing you must chose an instance size with over 5 GB RAM).
     Type: String
   ClusterNodeMax:
     Default: 1
+    Description: Maximum number of nodes in the cluster.
     Type: Number
   ClusterNodeMin:
     Default: 1
+    Description: Minimum number of nodes in the cluster.
     Type: Number
   ClusterNodeVolumeSize:
     Default: 50
-    Description: Size of cluster node root volume in Gb (note - size based upon Application indexes x 4)
+    Description: Size of cluster node root volume in GB (note - size based upon Application indexes x 4)
     Type: Number
   CollaborativeEditingMode:
     Default: synchrony-separate-nodes
@@ -345,10 +353,9 @@ Parameters:
       - none
       - synchrony-local
       - synchrony-separate-nodes
-    Description: Collaborative Editing can be off, run locally on the confluence nodes (leave 1gb heap free for syncrony), or run on a separately autoscaled group of nodes.
+    Description: Collaborative Editing can be off, run locally on the Confluence nodes (leave 1 GB heap free for Synchrony), or run on a separately autoscaled group of nodes.
     Type: String
   ConfluenceDownloadUrl:
-    Default: ''
     Description: This parameter is used to download a custom Confluence version for testing purposes. Leave this parameter blank to automatically download the official version you specified earlier.
     Type: String
     ConstraintDescription: "Must be a valid Confluence download url from version 6.1.x or higher. Find valid versions at https://confluence.atlassian.com/display/DOC/Confluence+Release+Notes"
@@ -360,6 +367,14 @@ Parameters:
     Type: String
   CustomDnsName:
     Description: 'Use custom existing DNS name for your Data Center instance. This will take precedence over HostedZone. Please note: you must own the domain and configure it to point at the load balancer.'
+    Type: String
+  DBAcquireIncrement:
+    Default: 1
+    Description: Determines how many connections at a time c3p0 will try to acquire when the pool is exhausted
+    Type: String
+  DBIdleTestPeriod:
+    Default: 100
+    Description: If greater than 0, this is the frequency (in seconds) that c3po will test all idle, pooled but unchecked-out connections.
     Type: String
   DBInstanceClass:
     Default: db.t2.medium
@@ -401,21 +416,26 @@ Parameters:
     Type: String
   DBIops:
     Default: 1000
-    ConstraintDescription: 'Must be in the range 1000 - 30000'
-    Description: 'Must be in the range of 1000 - 30000 and a multiple of 1000. This value is only used with Provisioned IOPS. Note: The ratio of IOPS per allocated-storage must be between 3.00 and 10.00'
+    ConstraintDescription: Must be in the range 1000 - 30000
+    Description: 'Must be in the range of 1000 - 30000 and a multiple of 1000. This value is only used with Provisioned IOPS. Note: The ratio of IOPS per allocated-storage must be between 3.00 and 10.00.'
     MinValue: 1000
     MaxValue: 30000
     Type: Number
   DBMasterUserPassword:
     AllowedPattern: '[a-zA-Z0-9]*'
     ConstraintDescription: Must be at least 8 alphanumeric characters.
-    Description: Database admin account password.
-    NoEcho: True
+    Description: Password for the master ('postgres') account.
     MinLength: 8
     MaxLength: 128
+    NoEcho: true
+    Type: String
+  DBMaxStatements:
+    Default: 0
+    Description: The size of c3p0's global PreparedStatement cache. It controls the total number of Statements cached, for all Connections. If set, it should be a fairly large number, as each pooled Connection requires its own, distinct flock of cached statements.
     Type: String
   DBMultiAZ:
-    Default: false
+    Description: Whether to provision a multi-AZ RDS instance.
+    Default: true
     AllowedValues:
       - true
       - false
@@ -429,6 +449,10 @@ Parameters:
     MaxLength: 128
     NoEcho: true
     Type: String
+  DBPreferredTestQuery:
+    Default: 'select version();'
+    Description: The query that will be executed for all connection tests
+    Type: String
   DBPoolMaxSize:
     Default: 60
     Description: The maximum number of database connections that can be opened at any time
@@ -437,35 +461,10 @@ Parameters:
     Default: 20
     Description: The minimum number of idle database connections that are kept open at any time
     Type: String
-  DBTimeout:
-    Default: 30
-    Description: Number of seconds that Connections in excess of minPoolSize should be permitted to remain idle in the pool before being culled
-    Type: String
-  DBIdleTestPeriod:
-    Default: 100
-    Description: If greater than 0, this is the frequency (in seconds) that c3po will test all idle, pooled but unchecked-out connections.
-    Type: String
-  DBMaxStatements:
-    Default: 0
-    Description: The size of c3p0's global PreparedStatement cache. It controls the total number of Statements cached, for all Connections. If set, it should be a fairly large number, as each pooled Connection requires its own, distinct flock of cached statements.
-    Type: String
-  DBSnapshotName:
-    ConstraintDescription: Must be a valid RDS snapshot Name
-    Default: "look this up in RDS at DR region"
-    Description: RDS snapshot Name of an existing snapshot to restore from like "dr-opsj-snap-201709241212".
-    Type: String
-  DBValidate:
-    Default: false
-    Description: If true, a connection test will be performed at every connection checkout to verify that the connection is valid
-    Type: String
-  DBPreferredTestQuery:
-    Default: 'select version();'
-    Description: The query that will be executed for all connection tests
-    Type: String
-  DBAcquireIncrement:
-    Default: 1
-    Description: Determines how many connections at a time c3p0 will try to acquire when the pool is exhausted
-    Type: String
+  DBStorage:
+    Default: 10
+    Description: Database allocated storage size, in gigabytes (GB). If you choose Provisioned IOPS, storage should be between 100 and 6144
+    Type: Number
   DBStorageType:
     Default: General Purpose (SSD)
     AllowedValues:
@@ -474,10 +473,13 @@ Parameters:
     ConstraintDescription: Must be 'General Purpose (SSD)' or 'Provisioned IOPS'.
     Description: Database storage type
     Type: String
-  EBSSnapshotId:
-    Default: "look this up in ec2 snapshots at DR region"
-    ConstraintDescription: Must be a valid EBS snapshot ID
-    Description: EBS snapshot ID of an existing backup to restore of the form "snap-065c60da27161cb43".
+  DBTimeout:
+    Default: 30
+    Description: Number of seconds that Connections in excess of minPoolSize should be permitted to remain idle in the pool before being culled
+    Type: String
+  DBValidate:
+    Default: false
+    Description: If true, a connection test will be performed at every connection checkout to verify that the connection is valid
     Type: String
   DeployEnvironment:
     Default: stg
@@ -488,6 +490,11 @@ Parameters:
       - stg
     ConstraintDescription: Must be either Production (prod), Staging (stg), or Disaster Recovery (dr).
     Description: Environment of the application - either Production, Staging, or Disaster Recovery (DR)
+    Type: String
+  EBSSnapshotId:
+    Default: "look this up in ec2 snapshots at DR region"
+    ConstraintDescription: Must be a valid EBS snapshot ID
+    Description: EBS snapshot ID of an existing backup to restore of the form "snap-065c60da27161cb43".
     Type: String
   ExternalSubnets:
     ConstraintDescription: Must be a list of two or more Subnet IDs within the selected VPC.
@@ -507,7 +514,7 @@ Parameters:
   JvmHeapOverrideSynchrony:
     Description: Override the default amount of memory to allocate to the JVM for Synchrony, for your instance type - set size in meg or gig e.g. 1024m or 1g.
     Type: String
-  KeyName:
+  KeyPairName:
     ConstraintDescription: Must be the name of an existing EC2 Key Pair.
     Description: The EC2 Key Pair to allow SSH access to the instances
     Type: AWS::EC2::KeyPair::KeyName
@@ -551,9 +558,11 @@ Parameters:
     Description: Whether or not to encrypt the local storage on the EC2 nodes. The database and file system will be encrypted if the snapshots are of encrypted services.
     Type: String
   SynchronyClusterNodeMax:
+    Description: Maximum number of Synchrony cluster nodes
     Default: 1
     Type: Number
   SynchronyClusterNodeMin:
+    Description: Minimum number of Synchrony cluster nodes
     Default: 1
     Type: Number
   SynchronyNodeInstanceType:
@@ -701,7 +710,7 @@ Parameters:
     Type: String
   TomcatScheme:
     Default: http
-    Description: The name of the protocol you wish to have returned, ie "https" for an SSL Connector. The value of this setting also configures Tomcat's proxy port (443/80) and secure (true/false) settings appropriately.
+    Description: "The name of the protocol you wish to have returned, ie 'https' for an SSL Connector. The value of this setting also configures Tomcat's proxy port (443/80) and secure (true/false) settings appropriately."
     Type: String
     AllowedValues: [http, https]
   VPC:
@@ -1137,6 +1146,13 @@ Resources:
                     - !Sub '${AWS::StackName} sg'
                 Effect: Allow
                 Resource: ['*']
+        - PolicyName: !Sub '${AWS::StackName}-ansible-custom-policy'
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Action: ['iam:ListRolePolicies', 'iam:GetRolePolicy']
+                Effect: Allow
+                Resource: !Sub 'arn:aws:iam::${AWS::AccountId}:role/${AWS::StackName}-JiraClusterNodeRole*'
   ConfluenceClusterNodeInstanceProfile:
     Type: AWS::IAM::InstanceProfile
     Properties:
@@ -1148,8 +1164,8 @@ Resources:
     Properties:
       DesiredCapacity: !Ref ClusterNodeMin
       LaunchConfigurationName: !Ref ClusterNodeLaunchConfig
-      MaxSize: !Ref ClusterNodeMax
       MinSize: !Ref ClusterNodeMin
+      MaxSize: !Ref ClusterNodeMax
       TargetGroupARNs: [!Ref MainTargetGroup]
       VPCZoneIdentifier: !Ref InternalSubnets
       Tags:
@@ -1342,7 +1358,7 @@ Resources:
         - DeviceName: /dev/xvdf
           Ebs: {}
           NoDevice: true
-      KeyName: !Ref KeyName
+      KeyName: !Ref KeyPairName
       IamInstanceProfile: !Ref ConfluenceClusterNodeInstanceProfile
       ImageId:
         !FindInMap
@@ -1430,6 +1446,8 @@ Resources:
         - Key: environment
           Value: Production
           PropagateAtLaunch: true
+      TerminationPolicies:
+        - OldestInstance
   SynchronyClusterNodeLaunchConfig:
     Type: AWS::AutoScaling::LaunchConfiguration
     Condition: UseSynchronyAutoScalingGroup
@@ -1585,7 +1603,7 @@ Resources:
         - DeviceName: /dev/xvdf
           Ebs: {}
           NoDevice: true
-      KeyName: !Ref KeyName
+      KeyName: !Ref KeyPairName
       IamInstanceProfile: !Ref ConfluenceClusterNodeInstanceProfile
       ImageId:
         !FindInMap
@@ -2032,7 +2050,7 @@ Outputs:
     Value: !Ref SecurityGroup
     Export: {
       Name: !Join ['', [!Ref 'AWS::StackName', '-SGname']]
-      }
+    }
   DBEndpointAddress:
     Description: The Database Connection String
     Value: !GetAtt DB.Endpoint.Address
