--- a/templates/CrowdDataCenter.template.yaml
+++ b/templates/CrowdDataCenter.template.yaml
@@ -152,7 +152,7 @@ Metadata:
         default: Internal subnets *
       JvmHeapOverride:
         default: JVM Heap Size Override
-      KeyName:
+      KeyPairName:
         default: Key Name *
       LocalAnsibleGitRepo:
         default: Git repo for local-ansible
@@ -508,7 +508,7 @@ Parameters:
   JvmHeapOverride:
     Description: Override the default amount of memory to allocate to the JVM for your instance type - set size in meg or gig e.g. 1024m or 1g
     Type: String
-  KeyName:
+  KeyPairName:
     ConstraintDescription: Must be the name of an existing EC2 Key Pair.
     Description: The EC2 Key Pair to allow SSH access to the instances
     Type: AWS::EC2::KeyPair::KeyName
@@ -1206,7 +1206,7 @@ Resources:
         - DeviceName: /dev/xvdf
           Ebs: {}
           NoDevice: true
-      KeyName: !Ref KeyName
+      KeyName: !Ref KeyPairName
       IamInstanceProfile: !Ref CrowdClusterNodeInstanceProfile
       ImageId:
         !FindInMap
