--- a/templates/ConfluenceServer.template.yaml
+++ b/templates/ConfluenceServer.template.yaml
@@ -140,7 +140,7 @@ Metadata:
         default: JVM Heap Size Override for Confluence
       JvmHeapOverrideSynchrony:
         default: JVM Heap Size Override for Synchrony
-      KeyName:
+      KeyPairName:
         default: Key Name *
       LoadBalancerScheme:
         default: Load Balancer Scheme
@@ -478,7 +478,7 @@ Parameters:
   JvmHeapOverrideSynchrony:
     Description: Override the default amount of memory to allocate to the Synchrony JVM for your instance type - set size in meg or gig e.g. 1024m or 1g
     Type: String
-  KeyName:
+  KeyPairName:
     ConstraintDescription: Must be the name of an existing EC2 Key Pair.
     Description: The EC2 Key Pair to allow SSH access to the instances
     Type: AWS::EC2::KeyPair::KeyName
