ITOPS-1534 More KeyPairName refactor

--- a/templates/ConfluenceServerClone.template.yaml
+++ b/templates/ConfluenceServerClone.template.yaml
@@ -35,7 +35,7 @@ Metadata:
           - CidrBlock
           - ExternalSubnets
           - InternalSubnets
-          - KeyName
+          - KeyPairName
           - SSLCertificateARN
           - VPC
       - Label:
