ITOPS-1534 Never associate public IP address with the backend nodes, always use a load balancer

--- a/templates/ConfluenceServer.template.yaml
+++ b/templates/ConfluenceServer.template.yaml
@@ -1264,6 +1264,7 @@ Resources:
                 packages:
                   yum: [nfs-utils]
     Properties:
+      AssociatePublicIpAddress: false
       BlockDeviceMappings:
         - DeviceName: /dev/xvda
           Ebs:
