ITOPS-1534 Added termination policy

--- a/templates/CrowdDataCenter.template.yaml
+++ b/templates/CrowdDataCenter.template.yaml
@@ -1028,6 +1028,8 @@ Resources:
         - Key: service_name
           Value: !Ref AWS::StackName
           PropagateAtLaunch: true
+      TerminationPolicies:
+        - OldestInstance
   ClusterNodeLaunchConfig:
     Type: AWS::AutoScaling::LaunchConfiguration
     DependsOn:
