--- a/templates/ConfluenceDataCenter.template.yaml
+++ b/templates/ConfluenceDataCenter.template.yaml
@@ -1191,6 +1191,8 @@ Resources:
         - Key: Cluster
           Value: !Ref AWS::StackName
           PropagateAtLaunch: true
+      TerminationPolicies:
+        - OldestInstance
   ClusterNodeLaunchConfig:
     Type: AWS::AutoScaling::LaunchConfiguration
     DependsOn:
