--- a/templates/CrowdDataCenterClone.template.yaml
+++ b/templates/CrowdDataCenterClone.template.yaml
@@ -1002,6 +1002,8 @@ Resources:
         - Key: Cluster
           Value: !Ref AWS::StackName
           PropagateAtLaunch: true
+      TerminationPolicies:
+        - OldestInstance
   ClusterNodeLaunchConfig:
     Type: AWS::AutoScaling::LaunchConfiguration
     Metadata:
