ITOPS-1507 cfn-lint errors fixed

--- a/templates/CrowdDataCenterClone.template.yaml
+++ b/templates/CrowdDataCenterClone.template.yaml
@@ -1452,7 +1452,7 @@ Resources:
         Interval: '30'
         UnhealthyThreshold: '2'
         HealthyThreshold: '2'
-      Scheme: !If [UsePublicIp, 'internet-facing', 'internal']
+      Scheme: !Ref LoadBalancerScheme
       SecurityGroups: [!Ref SecurityGroup]
       Subnets: !Ref ExternalSubnets
       Tags:
